# dmail

./: flake.nix
server/: Cargo.toml
tui/: Cargo.toml
tui/src/: main.rs
