[package]
name = "tui"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui = "0.30.0"
color-eyre = "0.6.5"
strum = "0.27"
strum_macros = "0.27"
age = "0.11.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
x25519-dalek = "2.0"
ed25519-dalek = "2.0"
bitcoin-base58 = "0.1.20"
