[package]
name = "tui"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui = "0.30.0"
color-eyre = "0.6.5"
strum = "0.27"
strum_macros = "0.27"
age = "0.11.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bs58 = "0.5.1"
x25519-dalek = { version = "2.0.0", features = [
  "getrandom",
  "static_secrets",
] }
ed25519-dalek = { version = "2.0.0", features = ["rand_core"] }
rand = "0.8"
