[package]
name = "tui"
version = "0.1.0"
edition = "2024"

[dependencies]
cursive = "0.21"
age = "0.11.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
multibase = "0.9"
x25519-dalek = { version = "2.0.0", features = ["getrandom", "static_secrets"] }
ed25519-dalek = { version = "2.0.0", features = ["rand_core"] }
rand = "0.8"
anyhow = "1.0.101"
